# cat-dog-classification

./: .gitignore  README.md  pyproject.toml  train.py
src/: data_setup.py  engine.py  model.py
